--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/firebase": "^6.1.1",
     "firebase": "^7.19.1",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.14.0",
     "vue-youtube": "^1.4.0"
   },
